--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
     <body class="__className_e8ce0c min-h-screen bg-background text-foreground">
         <div class="flex flex-col min-h-screen items-center p-4 sm:p-6 lg:p-8">
             <header class="w-full max-w-7xl flex flex-col sm:flex-row justify-between items-center mb-8 gap-4">
-                <h1 class="text-2xl sm:text-3xl font-bold text-primary">
-                  HTTP Status Code Explorer – Learn All HTTP Response Codes
-                </h1>
+                <h1 class="text-2xl sm:text-3xl font-bold text-primary">http-code-explorer</h1>
                 <div class="flex gap-2">
                     <button
                         data-slot="button"
